src/assets/styles/src/main.css
@import url("https://fonts.googleapis.com/css2?family=Readex+Pro:wght@160..700&display=swap");

@import "tailwindcss/base";
@import "tailwindcss/components";

@import "./_btn.css";
@import "./_dropdown.css";
@import "./_form.css";
@import "./_table.css";

@import "./_sidebar.css";

@import "tailwindcss/utilities";

@layer base {
  html,
  body,
  #app {
    min-height: 100%;
  }

  body {
    color: theme(colors.primary);
    font-family: "Readex Pro", sans-serif;
  }
}

@layer utilities {
  .login-bg {
    background: linear-gradient(180deg, #edf0f3 0%, #dfe0e5 100%);
  }

  .site-bg {
    background: linear-gradient(180deg, #edf0f3 0%, #dfe0e5 100%);
  }

  .box-gradient {
    background: linear-gradient(91.64deg, #f2f8ff 0%, #ffffff 100%);
  }

  .orange-gradient {
    box-shadow: 0px 10px 10px rgba(21, 30, 63, 0.1);
    background: linear-gradient(90deg, #ffe0cc 0%, #ffffff 100%);
  }
}

